[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-agent-learning"
version = "0.1.0"
description = "Self-learning middleware for enterprise AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ravi Chahal", email = "ravi@rtkchahal.com" }
]
keywords = ["ai", "agents", "enterprise", "learning", "langgraph", "autogen", "bm25"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/rtkchahal/enterprise-agent-learning"
Repository = "https://github.com/rtkchahal/enterprise-agent-learning"
Issues = "https://github.com/rtkchahal/enterprise-agent-learning/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_agent_learning"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=enterprise_agent_learning --cov-report=term-missing"
